--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>Data Lovers</title>
+    <meta charset="utf-8" />
+    <title>Data Lovers Pokemon</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="root"></div>
+
+    <header>
+      <img src="./img/header-pokemon.png" />
+    </header>
+
+    <div class="section-search">
+      <select id="order-name" class="order-name">
+        <option value="none">Ordenar por:</option>
+        <option value="select-A-Z">A - Z</option>
+        <option value="select-Z-A">Z - A</option>
+      </select>
+      <input id="input-name" class="input-name" placeholder=" ex: Pikachu" />
+      <select id="order-type" class="order-type">
+        <option value="none">Tipo:</option>
+      </select>
+    </div>
+
+    <main>
+      <section id="list-cards" class="container"></section>
+    </main>
+
     <script src="main.js" type="module"></script>
   </body>
 </html>
