--- a/index.html
+++ b/index.html
@@ -6,28 +6,26 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <header>
+        <img src="./img/header-pokemon.png" />
+      </header>
+      <div class="section-search">
+        <select id="order-name" class="order-name">
+          <option value="none">Ordenar por:</option>
+          <option value="select-A-Z">A - Z</option>
+          <option value="select-Z-A">Z - A</option>
+        </select>
+        <input id="input-name" class="input-name" placeholder=" ex: Pikachu" />
+        <select id="order-type" class="order-type">
+          <option value="none"></option>
+        </select>
+      </div>
 
-    <header>
-      <img src="./img/header-pokemon.png" />
-    </header>
-
-    <div class="section-search">
-      <select id="order-name" class="order-name">
-        <option value="none">Ordenar por:</option>
-        <option value="select-A-Z">A - Z</option>
-        <option value="select-Z-A">Z - A</option>
-      </select>
-      <input id="input-name" class="input-name" placeholder=" ex: Pikachu" />
-      <select id="order-type" class="order-type">
-        <option value="none">Tipo:</option>
-      </select>
+      <main>
+        <section id="list-cards" class="container"></section>
+      </main>
     </div>
-
-    <main>
-      <section id="list-cards" class="container"></section>
-    </main>
-
     <script src="main.js" type="module"></script>
   </body>
 </html>
