--- a/src/index.html
+++ b/src/index.html
@@ -16,16 +16,15 @@
           <option value="select-A-Z">A - Z</option>
           <option value="select-Z-A">Z - A</option>
         </select>
-        <input id="input-name" class="input-name" placeholder=" ex: Pikachu" />
-        <select id="order-type" class="order-type">
-          <option value="none"></option>
-        </select>
+        <select id="order-type" class="order-type"></select>
       </div>
-
-      <main>
-        <section id="list-cards" class="container"></section>
-      </main>
-    </div>
-    <script src="main.js" type="module"></script>
-  </body>
+    </section>
+  </header>
+  <main>
+    <section id="list-cards" class="container"></section>
+    <section id="filtro"></section>
+  </main>
+  <script src="data/pokemon/pokemon.js"></script>
+  <script type="module" src="main.js  "></script>
+</body>
 </html>
