filtro de busca tipo e ordenação

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <section id="filtro"></section>
   </main>
   <script src="data/pokemon/pokemon.js"></script>
-  <script type="module" src="main.js  "></script>
+  <script src="main.js  "></script>
+  <script src="data.js  "></script>
+
 </body>
 </html>
