--- a/src/index.html
+++ b/src/index.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Data Lovers Pokemon</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div id="root">
-      <header>
-        <img src="./img/header-pokemon.png" />
-      </header>
-      <div class="section-search">
-        <select id="order-name" class="order-name">
-          <option value="none">Ordenar por:</option>
-          <option value="select-A-Z">A - Z</option>
-          <option value="select-Z-A">Z - A</option>
-        </select>
-        <select id="order-type" class="order-type"></select>
-      </div>
-    </section>
-  </header>
-  <main>
-    <section id="list-cards" class="container"></section>
-    <section id="filtro"></section>
-  </main>
-  <script src="data/pokemon/pokemon.js"></script>
-  <script src="main.js  "></script>
-  <script src="data.js  "></script>
+
+<head>
+  <meta charset="utf-8" />
+  <title>Data Lovers Pokemon</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <div id="root">
+    <header>
+      <section class="containerPoke">
+        <img src="./img/PokeGo.png" id="pokeGoLogo"/>
+        <div class="section-search">
+          <select id="order-name" class="order-name">
+            <option value="none">Ordenar por:</option>
+            <option value="select-A-Z">A - Z</option>
+            <option value="select-Z-A">Z - A</option>
+          </select>
+          <select id="order-type" class="order-type"></select>
+        </div>
+      </section>
+    </header>
+    <main>
+      <section id="list-cards" class="container"></section>
+      <section id="filtro"></section>
+    </main>
+    <script src="data/pokemon/pokemon.js"></script>
+    <script src="main.js  "></script>
+    <script src="data.js  "></script>
 
 </body>
+
 </html>
