--- a/src/index.html
+++ b/src/index.html
@@ -14,23 +14,24 @@
       <section class="containerPoke">
         <img src="./img/PokeGo.png" id="pokeGoLogo"/>
         <div class="section-search">
-          <select id="order-name" class="order-name">
+          <select id="order-name" >
             <option value="none">Ordenar por:</option>
             <option value="select-A-Z">A - Z</option>
             <option value="select-Z-A">Z - A</option>
           </select>
-          <select id="order-type" class="order-type"></select>
+          <select id="order-type" ></select>
         </div>
       </section>
     </header>
     <main>
+      <section id="percentage"></section>
       <section id="list-cards" class="container"></section>
       <section id="filtro"></section>
     </main>
     <script src="data/pokemon/pokemon.js"></script>
     <script src="main.js  "></script>
     <script src="data.js  "></script>
- 
+
 
 </body>
 
