--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,12 @@
     </header>
     <section id="percentage"></section>
     <div class="section-search">
-      <select id="order-name" class="order-name">
+      <select id="order-name" class="order">
         <option value="none">Ordenar por:</option>
         <option value="select-A-Z">A - Z</option>
         <option value="select-Z-A">Z - A</option>
       </select>
-      <select id="order-type" class="order-type"></select>
+      <select id="order-type" class="order"></select>
     </div>
     <main>
       
