icon e scrollbar prontos

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Pokemon Lovers</title>
+  <title>Enciclopedia-Pokemon</title>
+  <link rel="icon" 
+    type="image/png" 
+    href="./img/PokeIcon.png"
+  />
   <link rel="stylesheet" href="style.css" />
 </head>
 
