ajustes logo e link do readme

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Enciclopedia-Pokemon</title>
+  <title>Enciclopedia-Pokémon</title>
   <link rel="icon" 
     type="image/png" 
     href="./img/PokeIcon.png"
