link com pokemon funcionando

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
   <div id="root">
     <header id="header">
       <img src="./img/PokeGo.png" id="pokeGoLogo" />
+      <a href="https://pokemongolive.com/pt_br/" target="_blank"><img class="pokemon" src="https://media.giphy.com/media/xUA7bgk8GNsDnOhHbO/giphy.gif"/></a>
     </header>
     <section id="percentage"></section>
     <div class="section-search">
